--- a/qs05/contact/index.html
+++ b/qs05/contact/index.html
@@ -16,7 +16,7 @@
   <!-- Begin Nav -->
   <!-- Small Navigation -->
   <div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
-    <a class="logo-small show-for-small-only" href="#"><img src="Images/btechlogo50x50.png" /></a>
+    <a class="logo-small show-for-small-only" href="#"><img src="http://placehold.it/50x50?text=LOGO" /></a>
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
   </div>
@@ -26,7 +26,7 @@
 
     <div class="logo-wrapper hide-for-small-only">
       <div class="logo">
-        <img src="Images/btechlogo350x150.png">
+        <img src="http://placehold.it/350x150?text=LOGO">
       </div>
     </div>
 
@@ -34,8 +34,8 @@
     <div class="top-bar-left">
       <ul class="vertical medium-horizontal menu">
         <li><a href="#">Home</a></li>
-        <li><a href="blog/index.html">Blog</a></li>
-        <li><a href="about/index.html">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
 
@@ -43,13 +43,13 @@
     <div class="top-bar-right">
       <ul class="vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown">
         <li class="has-submenu">
-          <a href="faq/index.html">FAQ</a>
+          <a href="#">About</a>
           <ul class="submenu menu vertical medium-horizontal" data-submenu>
             <li><a href="#">First link in dropdown</a></li>
           </ul>
         </li>
         <li class="has-submenu">
-          <a href="contact/index.html">Contact</a>
+          <a href="#">FAQ</a>
           <ul class="submenu menu vertical" data-submenu>
             <li><a href="#">First link in dropdown</a></li>
           </ul>
@@ -70,14 +70,14 @@
   <footer class="footer">
     <div class="row">
       <div class="small-12 columns">
-        <p class="slogan">Et -710 Quick Site</p>
+        <p class="slogan">Finger-lickin' good</p>
         <p class="links">
           <a href="#">Home</a>
-          <a href="blog/index.html">Blog</a>
-          <a href="pricing/index.html">Pricing</a>
-          <a href="about/index.html">About</a>
-          <a href="faq/index.html">Faq</a>
-          <a href="contact/index.html">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Pricing</a>
+          <a href="#">About</a>
+          <a href="#">Faq</a>
+          <a href="#">Contact</a>
         </p>
         <p class="copywrite">Copywrite not copypwrite © 2015</p>
       </div>
