--- a/qs05/index.html
+++ b/qs05/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>ET-710 Quick Site</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/nav.css">
@@ -72,7 +72,7 @@
       <div class="small-12 columns">
         <p class="slogan">Et -710 Quick Site</p>
         <p class="links">
-          <a href="#">Home</a>
+          <a href="home/index.html">Home</a>
           <a href="blog/index.html">Blog</a>
           <a href="pricing/index.html">Pricing</a>
           <a href="about/index.html">About</a>
