--- a/qs05/contact/index0.html
+++ b/qs05/contact/index0.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css">
+    <title>ET-710 Quick Site</title>
+    <link rel="stylesheet" href="../css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/content.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="../css/footer.css">
   </head>
   <body>
   <!-- Begin Nav -->
   <!-- Small Navigation -->
   <div class="title-bar" data-responsive-toggle="nav-menu" data-hide-for="medium">
-    <a class="logo-small show-for-small-only" href="#"><img src="http://placehold.it/50x50?text=LOGO" /></a>
+    <a class="logo-small show-for-small-only" href="#"><img src="../Images/btechlogo50x50.png" /></a>
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
   </div>
@@ -26,16 +26,16 @@
 
     <div class="logo-wrapper hide-for-small-only">
       <div class="logo">
-        <img src="http://placehold.it/350x150?text=LOGO">
+        <img src="../Images/btechlogo350x150.png">
       </div>
     </div>
 
     <!-- Left Nav Section -->
     <div class="top-bar-left">
       <ul class="vertical medium-horizontal menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="../home/index.html">Home</a></li>
+        <li><a href="../blog/index.html">Blog</a></li>
+        <li><a href="../about/index.html">About</a></li>
       </ul>
     </div>
 
@@ -43,13 +43,13 @@
     <div class="top-bar-right">
       <ul class="vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown">
         <li class="has-submenu">
-          <a href="#">About</a>
+          <a href="faq/index.html">FAQ</a>
           <ul class="submenu menu vertical medium-horizontal" data-submenu>
             <li><a href="#">First link in dropdown</a></li>
           </ul>
         </li>
         <li class="has-submenu">
-          <a href="#">FAQ</a>
+          <a href="contact/index.html">Contact</a>
           <ul class="submenu menu vertical" data-submenu>
             <li><a href="#">First link in dropdown</a></li>
           </ul>
@@ -70,23 +70,23 @@
   <footer class="footer">
     <div class="row">
       <div class="small-12 columns">
-        <p class="slogan">Finger-lickin' good</p>
+        <p class="slogan">Et -710 Quick Site</p>
         <p class="links">
           <a href="#">Home</a>
-          <a href="#">Blog</a>
-          <a href="#">Pricing</a>
-          <a href="#">About</a>
-          <a href="#">Faq</a>
-          <a href="#">Contact</a>
+          <a href="../blog/index.html">Blog</a>
+          <a href="../pricing/index.html">Pricing</a>
+          <a href="../about/index.html">About</a>
+          <a href="../faq/index.html">Faq</a>
+          <a href="../contact/index.html">Contact</a>
         </p>
         <p class="copywrite">Copywrite not copypwrite © 2015</p>
       </div>
     </div>
   </footer>
   <!-- End Footer -->
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
+    <script src="../js/vendor/jquery.js"></script>
+    <script src="../js/vendor/what-input.js"></script>
+    <script src="../js/vendor/foundation.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
