--- a/qs05/faq/index.html
+++ b/qs05/faq/index.html
@@ -61,6 +61,10 @@
   <!-- End Nav -->
 
   <!-- Begin Hero -->
+  <header class="hero">
+    <h1>This is heaven</h1>
+  </header>
+  
   <!-- End Hero -->
 
   <!-- Begin Content -->
